--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dragula": "^3.7.1",
     "@types/uuid": "^8.3.4",
     "serve": "^13.0.2",
     "ts-loader": "^9.2.6",
@@ -20,6 +21,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "dragula": "^3.7.3",
     "uuid": "^8.3.2"
   }
 }
